<resources>
    <string name="app_name">Agriculture App</string>
    <string name="welcome_to_agriculture_store">Welcome to Agriculture Store</string>
    <string name="username">Username</string>
    <string name="Username">Username</string>
    <string name="login">Login</string>
    <string name="or_sign_up_with">Or Sign Up With</string>
    <string name="quality_and_naturally">Quality and Naturally</string>
    <string name="experience_the_purity_of_nature_with_every_product_cultivated_with_care_and_commitment_to_excellence">Experience the purity of nature with every product, cultivated with care and commitment to excellence.</string>
    <string name="get_started">Get Started!</string>
    <string name="fruits">Fruits</string>
    <string name="this_orage_is_one_of_the_best_naturally_fruit_in_cambodia_grow_in_the_country_side_in_cambodia_100_naturally_with_the_good_tast_and_the_fruit_is_fresh_from_the_farm_you_will_get_the_best_orange_for_your_needed_buy_now_to_get_fresh_and_naturally_orange_with_perfect_tast_in_our_country">This orage is one of the best naturally fruit in Cambodia, grow in the country side in Cambodia, 100% naturally with the good tast and the fruit is fresh from the farm , You will get the best orange for your needed. Buy now to get fresh and naturally orange with perfect tast in our country.</string>
    <string name="details">Details</string>
    <string name="fresh_oranage">Fresh Oranage</string>
    <string name="product_details">Product Details</string>
    <string name="total_price_7_98">Total Price: $7.98</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="_3_99_kg">$3.99/kg</string>
    <string name="_2_kg">2 KG</string>
    <string name="search_your_products">Search Your Products</string>
    <string name="jame_sbone">Jame Sbone</string>
    <string name="customer">Customer</string>
    <string name="follow">Follow</string>
    <string name="message">Message</string>
    <string name="overview">Overview</string>
    <string name="account_setting">Account Setting</string>
    <string name="tasks">Tasks</string>
    <string name="help">Help</string>
    <string name="jame_sbone1">Jame Sbone</string>
    <string name="location">Location</string>
    <string name="phnom_penh_cambodia">Phnom Penh, Cambodia</string>
    <string name="get_30_discount">Get 30% Discount</string>
    <string name="on_your_first_order">on your first order</string>
    <string name="from_app">from app</string>
    <string name="buy_now">Buy Now</string>
    <string name="categories">Categories</string>
    <string name="vegetables">Vegetables</string>
    <string name="sell">Sell</string>
    <string name="rice">Rice</string>
    <string name="meat">Meat</string>
    <string name="fishes">Fishes</string>
</resources>