<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="#03A9F4">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="21dp"
                    android:background="@drawable/menu_bar" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/map" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/location"
                    android:textColor="#fff"
                    android:textSize="30sp" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="70dp"
                    android:background="@drawable/notification"
                    android:importantForAccessibility="no" />

            </LinearLayout>
            <EditText
                android:id="@+id/etUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="180dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/frame7"
                android:drawableEnd="@drawable/search"
                android:drawablePadding="20dp"
                android:hint="@string/search_your_products"
                android:paddingStart="50dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                android:textColor="#191919"
                android:textColorHint="#CECECE"
                android:textSize="18sp"
                android:textStyle="bold"
                android:importantForAutofill="no" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/phnom_penh_cambodia"
                android:textColor="#fff"
                android:textSize="25sp"
                android:textStyle="bold" />

        </FrameLayout>





        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_round">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/get_30_discount"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:text="@string/on_your_first_order"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="80dp"
                android:text="@string/from_app"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="160dp"
                android:layout_height="130dp"
                android:layout_marginStart="210dp"
                android:background="@drawable/buy" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="112dp"
                android:background="@drawable/button_shape"
                android:text="@string/buy_now"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp"
                android:textStyle="bold" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/categories"
            android:textColor="#4C4C4C"
            android:textSize="25sp"
            android:textStyle="bold" />

        <!-- Categories LinearLayout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/frame1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/frame1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="70dp"
                    android:text="@string/vegetables"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/vegetable"
                    android:importantForAccessibility="no" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/btnFruit"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/frame2">

                <ImageButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/fruit" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="70dp"
                    android:text="Fruits"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/frame3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/frame3">

                <ImageButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/fish" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="70dp"
                    android:text="@string/fishes"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </FrameLayout>
        </LinearLayout>

        <!-- Second row of categories -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/frame4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/frame4">

                <ImageButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/meat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="70dp"
                    android:text="@string/meat"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/frame5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/frame5">

                <ImageButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/rice"
                    android:importantForAccessibility="no" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="70dp"
                    android:text="@string/rice"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/frame6"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/frame6">

                <ImageButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/groceries" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="70dp"
                    android:text="Groceries"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </FrameLayout>
        </LinearLayout>


        <!-- Bottom navigation bar -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:layout_marginTop="75dp"
            android:background="@drawable/frame8"
            android:layout_gravity="center">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/home_button"
                android:layout_marginStart="45dp"/>
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="30dp">
                <ImageView
                    android:id="@+id/messager"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/messager"/>
                <FrameLayout
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/frame9"
                    android:layout_marginTop="0dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1"
                        android:textSize="15sp"
                        android:layout_gravity="center"
                        android:textColor="#fff"
                        android:textStyle="bold"/>

                </FrameLayout>
            </FrameLayout>

            <ImageView
                android:id="@+id/btnPost"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/message"
                android:layout_marginStart="30dp"/>
            <ImageView
                android:id="@+id/btnProfile"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/personal1"
                android:layout_marginStart="30dp"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/settings"
                android:layout_marginStart="30dp"/>

        </LinearLayout>
    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawer_menu" />
</androidx.drawerlayout.widget.DrawerLayout>
