<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#666A6A">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Piseth Mart"
            android:textSize="20sp"
            android:textColor="#fff"
            android:gravity="center"
            android:layout_marginTop="25dp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="350dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/mart"
            android:contentDescription="Mart" />

        <EditText
            android:id="@+id/etUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/username"
            android:drawableStart="@drawable/personal3"
            android:textSize="18sp"
            android:backgroundTint="#fff"
            android:textColorHint="#CECECE"
            android:textColor="#191919"
            android:background="@drawable/edittext_bg"
            android:paddingStart="50dp"
            android:paddingEnd="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:autofillHints=""
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edittext_bg"
            android:backgroundTint="#fff"
            android:drawableStart="@drawable/key"
            android:drawablePadding="20dp"
            android:hint="Password"
            android:paddingStart="50dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:textColor="#191919"
            android:textColorHint="#CECECE"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            tools:ignore="TextFields" />

        <Button
            android:layout_gravity="center"
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginTop="20dp"
            android:layout_marginStart="150dp"
            android:layout_marginEnd="150dp"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/frame8" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or_sign_up_with"
            android:textSize="15sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="25dp"
            android:textColor="#EFEFEF" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/facebook"
                android:layout_marginStart="5dp"
                android:importantForAccessibility="no" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/google"
                android:layout_marginStart="10dp"
                android:importantForAccessibility="no" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/apple"
                android:layout_marginStart="10dp"
                android:importantForAccessibility="no" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
